fixed the projects section and the overlap of the header and hero section

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -126,7 +126,7 @@
 
   body {
     @apply bg-background text-foreground;
-  }
+    }
 }
 
 /**
@@ -137,7 +137,7 @@
     h1 {
       font-size: var(--text-2xl);
       font-weight: var(--font-weight-medium);
-      line-height: 1.5;
+    /* padding-top: 80px; */ 
     }
 
     h2 {
